Bug 449077 - When "Restore manually saved session" is chosen, Kickoff doesn't show "Save Session" option in the power menu until after a restart
Summary: When "Restore manually saved session" is chosen, Kickoff doesn't show "Save S...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR minor
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
: 493445 498786 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-24 14:45 UTC by Bharadwaj Raju
Modified: 2025-09-22 12:16 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bharadwaj Raju 2022-01-24 14:45:11 UTC
SUMMARY
If a user switches to "Restore manually saved session" in SySe > Desktop Session from another option, the action to "Save Session" in the Kickoff power menu is not shown until after a Plasmashell restart.


STEPS TO REPRODUCE
1. While using a different session saving option, switch to "Restore manually saved session"
2. Check if Kickoff has the "Save Session" action yet

OBSERVED RESULT
Kickoff does not gain said action until after a restart

EXPECTED RESULT
Kickoff should gain the new item immediately

SOFTWARE/OS VERSIONS
Everything git master, but this has been a bug for many versions apparently
Comment 1 Volker Kuhlmann 2022-11-07 00:18:49 UTC
I can confirm this behaviour. It is necessary to log out (wasting all effort with laying out the work space), and log in again.

openSUSE 15.4
plasma5-workspace-5.24.4-bp154.2.3.1.x86_64
plasma-framework-5.90.0-bp154.1.42.x86_64
Comment 2 Nate Graham 2025-01-23 21:23:00 UTC
*** Bug 493445 has been marked as a duplicate of this bug. ***
Comment 3 Bug Janitor Service 2025-01-24 10:48:38 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/5114
Comment 4 Bug Janitor Service 2025-01-24 11:11:05 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2748
Comment 5 Marco Martin 2025-01-24 15:35:19 UTC
Git commit 966d0a953f8e19456526cde624879fa5e07d6bb8 by Marco Martin.
Committed on 24/01/2025 at 15:06.
Pushed by mart into branch 'master'.

kcms/ksmserver: remove system restart message

Now the session save behavior change works immediately, remove
the restart system message

M  +0    -27   kcms/ksmserver/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/966d0a953f8e19456526cde624879fa5e07d6bb8
Comment 6 Bug Janitor Service 2025-01-24 15:45:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2750
Comment 7 Marco Martin 2025-01-24 16:00:11 UTC
Git commit f304696dd9f231adbfed7adf7846a902610adea5 by Marco Martin.
Committed on 24/01/2025 at 15:45.
Pushed by mart into branch 'Plasma/6.3'.

kcms/ksmserver: remove system restart message

Now the session save behavior change works immediately, remove
the restart system message


(cherry picked from commit 966d0a953f8e19456526cde624879fa5e07d6bb8)

966d0a95 kcms/ksmserver: remove system restart message

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +0    -27   kcms/ksmserver/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/f304696dd9f231adbfed7adf7846a902610adea5
Comment 8 Nate Graham 2025-01-24 16:44:58 UTC
Git commit 26c4758b900f14e51dec3e703b73ca10941d2222 by Nate Graham, on behalf of Marco Martin.
Committed on 24/01/2025 at 16:44.
Pushed by ngraham into branch 'master'.

Watch for changes in session save mode

There was already a canSaveSessionChanged method, but was never used.

This adds a KConfigWatcher on ksmserverrc/General/loginMode and will
emit the canSaveSessionChanged when needed.

This makes the save session entry in Kickoff appear and disappear immediately
after the option has been changed in System Settings
FIXED-IN: 6.3.0

M  +7    -0    libkworkspace/sessionmanagement.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/26c4758b900f14e51dec3e703b73ca10941d2222
Comment 9 Nate Graham 2025-01-24 17:27:12 UTC
Git commit 4fac2f2a44e801bd773a4c954f0c9c211273a2fd by Nate Graham.
Committed on 24/01/2025 at 16:45.
Pushed by ngraham into branch 'Plasma/6.3'.

Watch for changes in session save mode

There was already a canSaveSessionChanged method, but was never used.

This adds a KConfigWatcher on ksmserverrc/General/loginMode and will
emit the canSaveSessionChanged when needed.

This makes the save session entry in Kickoff appear and disappear immediately
after the option has been changed in System Settings
FIXED-IN: 6.3.0


(cherry picked from commit 26c4758b900f14e51dec3e703b73ca10941d2222)

0517ea2a Watch for session save mode changes
c8bede90 Apply 1 suggestion(s) to 1 file(s)

Co-authored-by: Marco Martin <notmart@gmail.com>

M  +7    -0    libkworkspace/sessionmanagement.cpp

https://invent.kde.org/plasma/plasma-workspace/-/commit/4fac2f2a44e801bd773a4c954f0c9c211273a2fd
Comment 10 Marco Martin 2025-01-27 15:37:05 UTC
*** Bug 498786 has been marked as a duplicate of this bug. ***