Watch for changes in session save mode

There was already a canSaveSessionChanged method, but was never used.

This adds a KConfigWatcher on ksmserverrc/General/loginMode and will
emit the canSaveSessionChanged when needed.

This makes the save session entry in Kickoff appear and disappear immediately
after the option has been changed in System Settings

BUG: 449077
FIXED-IN: 6.3.0


(cherry picked from commit 26c4758b900f14e51dec3e703b73ca10941d2222)

0517ea2a Watch for session save mode changes
c8bede90 Apply 1 suggestion(s) to 1 file(s)

Co-authored-by: Marco Martin <notmart@gmail.com>